[package]
name = "isup"
version = "0.1.0"
edition = "2021"
description = "Build customizable systems for precise ranking and evaluation of network endpoints."
license = "MPL-2.0"

[dependencies]
# Asynchronous Runtime and Utilities
# -----------------------------------
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "time"] }
async-trait = "0.1.77"
futures = "0.3.30"

# Serialization/Deserialization
# ----------------------------------------
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
humantime = "2.1.0"

# HTTP and Networking
# --------------------
bytes = "1.5.0"
http-body-util = "0.1.0"
hyper = { version = "1.2.0", default-features = false }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.3", features = [
    "client-legacy",
    "tokio",
    "http1",
] }

# Data Structures
# -------------------------------
dashmap = "5.5.3"

# Redis Integration (Optional)
# ----------------------------
redis = { version = "0.24.0", optional = true, default-features = false }
deadpool-redis = { version = "0.14.0", optional = true }

# Features
# --------

[features]
default = []
all = ["redis"]
redis = [
    "dep:redis",
    "deadpool-redis",
    "redis/tokio-comp",
    "redis/tokio-native-tls-comp",
]


# Dev Dependencies
# ----------------
[dev-dependencies]
# Examples
warp = "0.3.6"
