[package]
name = "isup"
version = "0.1.0"
edition = "2021"
description = "Build customizable systems for precise ranking and evaluation of network endpoints."
license = "MPL-2.0"

[dependencies]
# Asynchronous Runtime and Utilities
# -----------------------------------
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "time"] }
async-trait = "0.1.89"
futures = "0.3.32"

# Serialization/Deserialization
# ----------------------------------------
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
humantime = "2.3.0"

# HTTP and Networking
# --------------------
bytes = "1.11.1"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", default-features = false }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.20", features = [
    "client-legacy",
    "tokio",
    "http1",
] }

# Data Structures
# -------------------------------
dashmap = "6.1.0"

# Redis Integration (Optional)
# ----------------------------
redis = { version = "1.2.1", optional = true, default-features = false }
deadpool-redis = { version = "0.23.0", optional = true }

# Features
# --------

[features]
default = []
all = ["redis"]
redis = [
    "dep:redis",
    "deadpool-redis",
    "redis/tokio-comp",
    "redis/tokio-native-tls-comp",
]


# Dev Dependencies
# ----------------
[dev-dependencies]
# Examples
warp = {version = "0.4.2", features = ["server"]}
